--- a/src/sass/_partials/_header-animado.sass
+++ b/src/sass/_partials/_header-animado.sass
@@ -63,30 +63,35 @@
                 background-image: url(/imagens/cenario_nuvens.png)
                 animation: anima_cenario 30s linear infinite reverse
                 background-size: auto 100%
+                background-repeat: no-repeat
 
             .casas
                 background-image: url('/imagens/cenario_Casas.png')
-                animation: anima_cenario 10s linear infinite reverse
-                 background-size: auto 100%
-                 background-repeat: no-repeat
+                animation: anima_cenario 30s linear infinite reverse
+                background-size: auto 100%
+                background-repeat: no-repeat
             
             .rua
                 background-image: url('/imagens/cenario_rua.png')
-                animation: anima_cenario 15s linear infinite reverse
-                 background-size: auto 100%
-                 background-repeat: no-repeat
+                animation: anima_cenario 30s linear infinite reverse
+                background-size: auto 100%
+                background-repeat: no-repeat
 
             .carrosCima
                 background-image: url('/imagens/cenario_carrosCima.png')
                 animation: anima_cenario 10s linear infinite reverse
-                 background-size: auto 100%
-                 background-repeat: no-repeat
+                background-size: auto 100%
+                background-repeat: no-repeat
+                position: absolute
+                top: -10px
 
             .carrosBaixo
                 background-image: url('/imagens/cenario_carrosBaixo.png')
-                animation: anima_cenario 10s linear infinite reverse
-                 background-size: auto 100%
-                 background-repeat: no-repeat
+                animation: anima_cenario 10s linear infinite 
+                background-size: auto 100%
+                background-repeat: no-repeat
+                position: absolute
+                top: -12px
 
        
         
